--- a/style.css
+++ b/style.css
@@ -713,7 +713,25 @@ ul{
     .bottom a{
         font-size: 23px;
     }
+    #txtBtn{
+        width: 50px;  
+    }
 
+    #blocSwitch{
+        width: 150px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        
+    }
+
+    .switch {
+        width: 60px;
+        height: 34px;
+        float:right;
+        margin: auto;
+      }
 }
 
 @media only screen and (max-width:672px){
@@ -732,7 +750,25 @@ ul{
     .bottom a{
         font-size: 23px;
     }
+    #txtBtn{
+        width: 50px;  
+    }
 
+    #blocSwitch{
+        width: 150px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        
+    }
+
+    .switch {
+        width: 60px;
+        height: 34px;
+        float:right;
+        margin: auto;
+      }
 }
 
 
