--- a/style.css
+++ b/style.css
@@ -359,7 +359,7 @@ ul{
     height: 300px;
     margin:15px;
     box-shadow: black 10px 10px 10px 0px;
-    background-image: url('images/sp.png');
+    background-image: url('images/motus.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
