--- a/style.css
+++ b/style.css
@@ -986,8 +986,11 @@ ul{
     }
     
     #txtBtn{
-        width: 80px;
-        margin-right: 70px;
+        width: 50px;
+        position: absolute;
+        right: 52%;
+        top: 70%;
+        text-align: center;
     }
         
     #blocSwitch{
