--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ a{
     background-color: rgba(0, 0, 0, 0.431);
 }
 
-.title img{
+.titre img{
     border-radius: 5px;
 }
 
@@ -58,7 +58,7 @@ a{
     flex-shrink: 0;
 }
 
-.title{
+.titre{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -150,12 +150,12 @@ i.right{
     cursor:pointer;
 }
 
-#txtBtn{
+.txtBtn{
     width: 150px;
     margin-left: 30px;
 }
  
- #blocSwitch{
+ .blocSwitch{
      width:90px;
      display: flex;
      flex-direction: column;
@@ -167,7 +167,7 @@ i.right{
      font-family: 'Lato',sans-serif;
 }
  
- #blocSwitch *{
+ .blocSwitch *{
      display: flex;
 }
  
@@ -300,21 +300,21 @@ ul{
     width:310px;
 }
 
-#sql{
+.sql{
     height: 70px;
     
 }
 
-#php{
+.php{
     width: 60px;
     
 }
 
-#wordpress{
+.wordpress{
     width: 50px;
 }
 
-#ajax{
+.ajax{
     width: 70px;
 }
 
@@ -357,7 +357,7 @@ ul{
 }
 
 
-#blocPendu{
+.blocPendu{
     text-align: center;
     /* background-color: blanchedalmond; */
     width: 300px;
@@ -371,7 +371,7 @@ ul{
 }
 
 
-#blocBblio{
+.blocBblio{
     width: 300px;
     height: 300px;
     margin:15px;
@@ -383,7 +383,7 @@ ul{
 }
 
 
-#blocCv{
+.blocCv{
     width: 300px;
     height: 300px;
     margin:15px;
@@ -395,7 +395,7 @@ ul{
 }
 
 
-#blocSp{
+.blocSp{
     width: 300px;
     height: 300px;
     margin:15px;
@@ -421,7 +421,7 @@ ul{
     margin: 50px 0px 50px 0px;
 }
 
-#illuBig{
+.illuBig{
     width:25%;
     margin: 50px 0px 50px 0px;
 }
@@ -463,7 +463,6 @@ ul{
     display: none;
     flex-direction: column;
     align-items: center;
-    /* background-color: #ad5d5d; */
     width: 60%;
     text-align: center;
 }
@@ -569,10 +568,10 @@ ul{
         color:rgb(218, 203, 199);
     }
     
-    #vae{
+    /* .vae{
         color: rgb(218, 203, 199);
         text-align: center;
-    }
+    } */
     
     textarea{
         background-color: rgb(27, 27, 27);
@@ -620,11 +619,11 @@ ul{
     
 
 
-    #index{
+    /* .index{
         list-style-type: none;
         line-height: 35px;
         color:wheat;
-    }
+    } */
     
     .com{
     background-color: rgba(0, 0, 0, 0.431);
@@ -636,6 +635,7 @@ ul{
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-family: 'Lato',sans-serif;
 }
 
 .logosBas{
@@ -670,7 +670,7 @@ ul{
     background-color: rgb(133, 131, 131);
 }
 
-.lightMode header , .lightMode #txtMaq ,.lightMode #txtIntS , .lightMode #txtIntW , .lightMode #txtGest , .lightMode #txtBack , .lightMode #txtBase , .lightMode #txtSecu{
+.lightMode header , .lightMode .txtMaq ,.lightMode .txtIntS , .lightMode .txtIntW , .lightMode .txtGest , .lightMode .txtBack , .lightMode .txtBase , .lightMode .txtSecu{
     color: black;
 }
 
@@ -699,12 +699,12 @@ ul{
 
 }
 
-.lightMode #logages img {
+.lightMode .logages img {
     filter: drop-shadow(7px 7px 7px black);
     -webkit-filter: drop-shadow(7px 7px 7px black);
 }
 
-.lightMode #realisations a{
+.lightMode .realisations a{
     background-color:#d8d8d800;
 }
 
@@ -724,7 +724,7 @@ ul{
     color:#0f0f0f;
 }
 
-.lightMode #cv img{
+.lightMode .cv img{
     border: solid black 2px;
     box-shadow: #0f0f0f 7px 7px 7px 0px;
 }
@@ -752,73 +752,10 @@ ul{
     background-color:#0f0f0f;
 }
 
-.lightMode #txtBtn{
+.lightMode .txtBtn{
     color:#0f0f0f;
     font-weight: bold;
 }
-
-/* @media only screen and (min-width:1297px) and (max-width:1700px){
-    
-    .wrapper{
-        display: flex;
-        flex-direction: column;
-    }
-    
-    
-    
-    header{
-        font-size:24px;
-        display: flex;
-        justify-content: space-evenly;
-    }
-
-
-    h2{
-        font-size:25px;
-    }
-
-    #txtBtn{
-    width: 150px;
-    }
-    
-    #blocSwitch{
-        width: 300px;
-        float: right;
-        position: absolute;
-        top:0px;
-        right: 0px;
-    }
-    
-    #blocSwitch *{
-        display: flex;
-
-    }
-
-    aside{
-        display: grid;
-        grid-template-columns: 1fr 2fr 1fr;
-        max-height: 250px;
-        position:relative;
-        background-color: rgba(0, 0, 0, 0.431);
-        order:0;
-    }
-
-    aside a{
-        font-size:17px;
-    }
-
-    .droite{
-        order:1;
-    }
-
-    .formations{
-        max-height: 1400px;
-    }
-
-    .bottom a{
-        font-size: 28px;
-    }
-} */
 
 
 @media only screen and (min-width:673px) and (max-width:1700px){
@@ -887,17 +824,17 @@ ul{
         display: none;
     }
 
-    #txtBtn{
+    .txtBtn{
         width: 100px;
         margin-right: 50px;
     }
         
-    #blocSwitch{
+    .blocSwitch{
         top:25%;
         left: 85%;
     }
     
-    #blocSwitch *{
+    .blocSwitch *{
         display: flex;
 
     }
@@ -918,7 +855,7 @@ ul{
         width: 300px;
     }
 
-    #illuBig{
+    .illuBig{
         width: 200px;
     }
 
@@ -985,13 +922,13 @@ ul{
         display:none;
     }
     
-    #txtBtn{
+    .txtBtn{
         width: 300px;
         position: absolute;
         text-align: center;
     }
         
-    #blocSwitch{
+    .blocSwitch{
         width: 100px;
         display: flex;
         position: absolute;
@@ -1000,7 +937,7 @@ ul{
         font-family: 'Lato' , sans-serif;
     }
     
-    #blocSwitch *{
+    .blocSwitch *{
         display: flex;
 
     }
@@ -1033,7 +970,7 @@ ul{
         width: 300px;
     }
 
-    #illuBig{
+    .illuBig{
         width: 200px;
     }
 
@@ -1106,7 +1043,7 @@ ul{
         display:none;
     }
     
-    #txtBtn{
+    .txtBtn{
         width: 50px;
         /* padding-left: 45px; */
         font-size: 12px;
@@ -1120,7 +1057,7 @@ ul{
         width: 60px;
     }
         
-    #blocSwitch{
+    .blocSwitch{
         width: 60px;
         display: flex;
         flex-direction: column;
@@ -1130,7 +1067,7 @@ ul{
         font-family: 'Lato' , sans-serif;
     }
     
-    #blocSwitch *{
+    .blocSwitch *{
         display: flex;
 
     }
@@ -1166,7 +1103,7 @@ ul{
         width: 300px;
     }
 
-    #illuBig{
+    .illuBig{
         width: 200px;
     }
 
