--- a/style.css
+++ b/style.css
@@ -377,7 +377,7 @@ ul{
     height: 300px;
     margin:15px;
     box-shadow: black 10px 10px 10px 0px;
-    background-image: url('images/bblio.png');
+    background-image: url('images/nike.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
