--- a/style.css
+++ b/style.css
@@ -365,19 +365,19 @@ ul{
     height: 300px;
     margin:15px;
     box-shadow: black 10px 10px 10px 0px;
-    background-image: url('images/pendu.png');
+    background-image: url('images/Capture\ d’écran\ 2022-06-29\ 152230.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
 }
 
 
-.blocBblio{
+.blocArbo{
     width: 300px;
     height: 300px;
     margin:15px;
     box-shadow: black 10px 10px 10px 0px;
-    background-image: url('images/nike.jpg');
+    background-image: url('images/arboriste06.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
